[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchain"
version = "0.1.0"
authors = [
    {name = "Nicko G"},
]
description = "A blockchain tracking and analysis package"
requires-python = ">=3.10"
dependencies = [
    "pymongo",
    "neo4j",
    "psycopg2",
    "web3",
    "requests",
    "eth-abi",
    "websockets",
    "fastapi",
    "uvicorn",
]

[project.scripts]
run-tracker = "run:main"
run-api = "run_api:main"

[tool.setuptools]
package-dir = {"" = "python"}
packages = {find = {where = ["python"]}}